--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_screenutil: ^5.9.0
   intl: ^0.18.1
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
   hugeicons:
     hosted: https://onepub.dev/api/kdpxxpsdav
     version: ^0.0.4
