- create social feed - create commenting system - create detailed photo screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hugeicons:
     hosted: https://onepub.dev/api/kdpxxpsdav
     version: ^0.0.4
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -101,8 +102,8 @@ flutter:
   assets:
     - assets/
 
-  fonts:
-    - family: LL Dot
-      fonts:
-        - asset: assets/fonts/dot_font.TTF
-          weight: 500
+  # fonts:
+    # - family: LL Dot
+    #   fonts:
+    #     - asset: assets/fonts/dot_font.TTF
+    #       weight: 500
